--- a/Fomalhaut2/Base.lproj/ProgressViewController.xib
+++ b/Fomalhaut2/Base.lproj/ProgressViewController.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="17506" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="21225" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
     <dependencies>
         <deployment identifier="macosx"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="17506"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="21225"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -22,9 +22,9 @@
                     <rect key="frame" x="18" y="49" width="444" height="42"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="42" id="6NT-eJ-hMP"/>
-                        <constraint firstAttribute="width" constant="440" id="TUn-0d-L0x"/>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="440" id="TUn-0d-L0x"/>
                     </constraints>
-                    <textFieldCell key="cell" lineBreakMode="clipping" title="Wait a few minutes for updating database..." id="2L7-dX-b59">
+                    <textFieldCell key="cell" lineBreakMode="clipping" title="Wait a few minutes for updating database..." usesSingleLineMode="YES" id="2L7-dX-b59">
                         <font key="font" usesAppearanceFont="YES"/>
                         <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="textBackgroundColor" catalog="System" colorSpace="catalog"/>
