--- a/Fomalhaut2/Base.lproj/Book.storyboard
+++ b/Fomalhaut2/Base.lproj/Book.storyboard
@@ -220,6 +220,7 @@
                         <outlet property="pageControl" destination="grQ-q3-Ia3" id="2pJ-y1-Rao"/>
                         <outlet property="pageOrderControl" destination="WvN-Nn-JeU" id="n6V-fi-KXC"/>
                         <outlet property="singlePageControl" destination="mfl-J5-UV0" id="OTS-9y-aET"/>
+                        <outlet property="viewStyleControl" destination="jFu-IR-q9R" id="0El-ya-VPz"/>
                         <segue destination="T99-gd-Ov7" kind="relationship" relationship="window.shadowedContentViewController" id="b4T-I6-yJI"/>
                     </connections>
                 </windowController>
